[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/gameplay/recruitment_panel/item/item.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_14.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/icon/squad_icon/icon_squad_archer.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/icon/locked.png" type="Texture" id=5]

[node name="item" type="MarginContainer"]
margin_right = 105.0
margin_bottom = 180.0
rect_min_size = Vector2( 105, 180 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 105.0
margin_bottom = 180.0
mouse_filter = 2

[node name="Frame2" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2"]
margin_right = 105.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer2"]
margin_top = 5.0
margin_right = 105.0
margin_bottom = 126.0
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer"]
margin_right = 1.0
margin_bottom = 121.0
rect_min_size = Vector2( 1, 0 )
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/HBoxContainer"]
margin_left = 5.0
margin_right = 100.0
margin_bottom = 121.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer2/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer/TextureRect/VBoxContainer"]
margin_right = 95.0
margin_bottom = 58.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer2/HBoxContainer/TextureRect/VBoxContainer"]
margin_top = 62.0
margin_right = 95.0
margin_bottom = 121.0
mouse_filter = 2
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.470588 )

[node name="Label2" type="Label" parent="Control/VBoxContainer2/HBoxContainer/TextureRect/VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Archer Tower"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer"]
margin_left = 104.0
margin_right = 105.0
margin_bottom = 121.0
rect_min_size = Vector2( 1, 0 )
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2"]
margin_top = 130.0
margin_right = 105.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="Control" type="Control" parent="Control/VBoxContainer2/MarginContainer2"]
margin_right = 105.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer2/MarginContainer2/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.643137 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer2/MarginContainer2"]
margin_right = 105.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="Control/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_right = 105.0
margin_bottom = 41.0
grow_vertical = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Archer Tower"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 45.0
margin_right = 105.0
margin_bottom = 50.0
rect_min_size = Vector2( 5, 5 )

[node name="lock" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
color = Color( 0, 0, 0, 0.772549 )

[node name="TextureRect" type="TextureRect" parent="Control/lock"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
expand = true

[node name="input_detection" parent="." instance=ExtResource( 3 )]

[connection signal="gui_input" from="." to="." method="_on_item_gui_input"]
[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
